pages half adaptive

--- a/css/blocks/footer.sass
+++ b/css/blocks/footer.sass
@@ -1,13 +1,13 @@
 .footer
   padding: 60px 0 65px
-  background: url("../images/bg_footer.jpg") no-repeat
+  background: url("../images/bg_footer.jpg")
   & .logo__text
     border-radius: 12px
   & .wrapper
-    display: flex
+    +space
   &__column
     &:nth-child(-n+2)
-      width: 40%
+      width: 30%
     &:nth-child(2)
       display: flex
   &__nav
