--- a/css/pages/services.sass
+++ b/css/pages/services.sass
@@ -30,6 +30,11 @@
     text-align: center
 
 .content__header
-  margin-top: 35px
+  margin: 35px 0 60px
   text-align: center
+
+.about
+  &__hero
+    background: url("../images/bg_hero_about.jpg") no-repeat center top
+
 
