--- a/css/responsive/max1200.sass
+++ b/css/responsive/max1200.sass
@@ -1,1 +1,10 @@
 @media only screen and (max-width: 1200px)
+  .footer
+    & .wrapper
+      justify-content: space-around
+    &__column
+      &:nth-child(2)
+        margin-top: 1.5em
+        order: 3
+        width: 100%
+        justify-content: space-evenly
