--- a/css/blocks/modals.sass
+++ b/css/blocks/modals.sass
@@ -70,20 +70,16 @@
     line-height: 1.5
     color: #ffffff
 
-//.modal-form__row
-//  label
-//    @include font($textBlack, 16px, 1.3)
-//    margin-bottom: 30px
-//    display: block
-
 .callback
   padding: 85px 0
   background: url("../images/bg_callback_ind.jpg") no-repeat center top
+  &_bg2
+    background: url("../images/bg_callback_office.jpg") no-repeat center top
   h3
-    max-width: 950px
     font-size: 40px
     font-weight: 800
     line-height: 1.1
+    text-transform: uppercase
   textarea
     padding-bottom: 15px
   &__input-wrapper
@@ -107,7 +103,6 @@
   &__add-file
     margin-top: 30px
   & .btn_submit
-    //margin-top: 60px
     width: 45%
   &__notice
     margin-left: 50px
