--- a/css/pages/complex.sass
+++ b/css/pages/complex.sass
@@ -1,7 +1,7 @@
 .hero
   &_complex
     padding: 85px 0
-    background: #666666 url("../images/bg_hero_complex.jpg") no-repeat
+    background: url("../images/bg_hero_complex.jpg") no-repeat
   &__first-row
     padding: 0 0 50px
     display: flex
@@ -68,7 +68,8 @@
     z-index: 30
     span.blue
       font-weight: 700
-
+  & .btn_gradient_small
+    margin-right: 10px
 
 .how
   margin: 65px 0 55px
@@ -136,20 +137,55 @@
 
 .voronka
   h2
+    margin-top: 50px
     text-align: center
   &__list
     padding-bottom: 50px
     margin-top: 85px
-    background: url("../images/voronka_blue.svg") top center no-repeat
+    background: url("../images/voronka_blue_arrows.svg") top center no-repeat
   &__line
     +space
     align-items: center
     height: 88px
     border-bottom: 1px solid $lightGray
+    &:first-child
+      border-top: 1px solid $lightGray
+      & .voronka__line__block_left
+        &::before
+          content: '01'
+    &:nth-child(2)
+      & .voronka__line__block_left
+        &::before
+          content: '02'
+    &:nth-child(3)
+      & .voronka__line__block_left
+        &::before
+          content: '03'
+    &:nth-child(4)
+      & .voronka__line__block_left
+        &::before
+          content: '04'
+    &:nth-child(5)
+      & .voronka__line__block_left
+        &::before
+          content: '05'
+    &:nth-child(6)
+      & .voronka__line__block_left
+        &::before
+          content: '06'
     &__block
       flex: 0 0 calc(100% / 3)
       &_left
-        max-width: 240px
+        display: inline-flex
+        align-items: center
+        //max-width: 260px
+        font-weight: 600
+        &::before
+          margin-right: 16px
+          font-size: 48px
+          font-weight: 800
+          color: $lightBlue
+          @include transform(rotate(270deg))
       &_center
         max-width: 350px
         color: #ffffff
@@ -158,7 +194,7 @@
         line-height: 1.35
         text-align: center
       &_right
-        max-width: 270px
+        font-size: 14px
         text-align: right
 
 
